# index

./: .env.example  .env.release.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEX_MASTER_PROMPT.md  CODING_RULES.md  DESIGN.md  Drive_Project_Catalog_Full_Spec.docx  INVARIANTS.md  MACOS_RELEASE_OPERATIONS.md  PRODUCT_SPEC.md  Project Overview.md  README.md  RELEASE_DESKTOP.md  RELEASE_NOTES_TEMPLATE.md  SCHEMA.md  TASKS.md  UI_PAGES.md  WEB_RELEASE.md  archive-phase.sh  launch.sh  package.json  pnpm-lock.yaml  ralph-once.sh  ralph.sh  review.sh  sandcastle.sh  tsconfig.base.json
.claude/commands/: grill-me.md  prd.md  ralph.md  review-impl.md
.planning/: DESIGN-CONTEXT.md  PROJECT.md  REQUIREMENTS-v2.md  REQUIREMENTS.md  ROADMAP-v2.md  ROADMAP.md  STATE.md  config.json  design-blueprint.html
.planning/archive/issues/: 01-palette-scaffold.md  02-fuzzy-search-projects.md  03-drive-results-and-actions.md  04-recent-projects.md  CSS-001-tailwind-to-vanilla.md  PRD-command-palette.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/issues/: 04-recent-projects.md  TEMPLATE.md
.planning/phases/01-strip-dead-weight/: 01-01-SUMMARY.md  01-RESEARCH.md  PATTERNS.md  PLAN.md
.planning/phases/02-trustworthy-mutations/: 01-RESEARCH.md  02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-05-SUMMARY.md  02-06-SUMMARY.md  PATTERNS.md  PLAN.md  SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/desktop/: catalog-story.html  design-presentation.html  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: .clippy.toml  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: archive_engine.rs  constants.rs  lib.rs  main.rs  rename_engine.rs  scan_engine.rs  volume_import.rs  volume_info.rs  volume_watcher.rs
docs/design/: DESIGN-AUDIT.md
scripts/: check-macos-release-env.sh  check-release-candidate.sh
(+88 files in other folders)
