[package]
name = "drive-project-catalog"
version = "0.1.0"
description = "Drive Project Catalog desktop shell"
authors = ["Codex"]
edition = "2021"

[lib]
name = "drive_project_catalog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }

[dev-dependencies]
tempfile = "3"
