[package]
name = "drive-project-catalog"
version = "1.0.0-rc1"
description = "Catalog desktop application"
authors = ["Catalog Contributors"]
edition = "2021"

[lib]
name = "drive_project_catalog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-notification = "2.0.0"
# Volume mount watcher — FSEvents on macOS via the notify crate.
notify = "6.1"
# Archive manifest — SHA-256 hashing for file integrity records.
sha2 = "0.10"
# LOCAL VENDOR PATCH (Drive Project Catalog):
# Uses a locally vendored copy of tauri-plugin-sql 2.4.0 that pins the SQLite
# connection pool to max_connections=1 and enables WAL + busy_timeout. See
# vendor/tauri-plugin-sql/src/wrapper.rs for the patch. Upstream's default pool
# breaks multi-statement transactions because BEGIN IMMEDIATE and subsequent
# statements can land on different pooled connections, surfacing as
# SQLITE_BUSY (code 5) during scan ingestion.
tauri-plugin-sql = { path = "vendor/tauri-plugin-sql", features = ["sqlite"] }
tauri-plugin-log = "2.8.0"
log = "0.4.29"
tauri-plugin-opener = "2.5.3"

[dev-dependencies]
tempfile = "3"
